--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -244,6 +244,22 @@ a.bx--side-nav__link[aria-current="page"]::before, a.bx--side-nav__link--current
     margin-top: 15px;
 }
 
+[class*='bx--loading__stroke'] {
+    stroke: $purple;
+}
+
+.bx--text-input:focus, .bx--text-input:active {
+    outline: 2px solid $purple;
+}
+
+input[type="search"],
+input[type="text"],
+select:focus,
+textarea {
+  font-size: 16px;
+  font-family: 'Breve Sans Text Book', sans-serif;
+}
+
 // Override for mobile safari background problem
 
 @media (hover: none) {
