--- a/src/gatsby-theme-carbon/components/ComponentStyles/SearchResults.module.scss
+++ b/src/gatsby-theme-carbon/components/ComponentStyles/SearchResults.module.scss
@@ -33,3 +33,9 @@
     margin-left: $spacing-03;
     bottom: -4px;
 }
+
+@media screen and (max-width: 700px) {
+    .resultsbox {
+        max-width: 98%;
+    }
+}
