Added ads to region pages. Small bug fixes.

--- a/src/gatsby-theme-carbon/components/ComponentStyles/Ads.module.scss
+++ b/src/gatsby-theme-carbon/components/ComponentStyles/Ads.module.scss
@@ -11,3 +11,7 @@
     margin-bottom: $spacing-03;
     border-bottom: 1px solid $button-separator;
 }
+
+.resultsbox[class*='ad'] {
+    width: 50%;
+}
